src/objects/Candidate_Step__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Path__c</fullName>
        <label>Candidate Path</label>
        <referenceTo>Candidate_Path__c</referenceTo>
        <relationshipLabel>Candidate Steps</relationshipLabel>
        <relationshipName>Candidate_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Step__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Training Step</label>
        <referenceTo>Training_Step__c</referenceTo>
        <relationshipLabel>Candidate Steps</relationshipLabel>
        <relationshipName>Candidate_Steps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Candidate Step</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Candidate Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>